; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_OpenSSL_InitLock.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_OpenSSL_InitLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ssl_lock_num = common dso_local global i32 0, align 4
@ssl_lock_obj = common dso_local global i32* null, align 8
@OpenSSL_Lock = common dso_local global i32 0, align 4
@OpenSSL_Id = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @OpenSSL_InitLock() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @CRYPTO_num_locks()
  store i32 %2, i32* @ssl_lock_num, align 4
  %3 = load i32, i32* @ssl_lock_num, align 4
  %4 = sext i32 %3 to i64
  %5 = mul i64 8, %4
  %6 = trunc i64 %5 to i32
  %7 = call i32* @Malloc(i32 %6)
  store i32* %7, i32** @ssl_lock_obj, align 8
  store i32 0, i32* %1, align 4
  br label %8

8:                                                ; preds = %18, %0
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* @ssl_lock_num, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %21

12:                                               ; preds = %8
  %13 = call i32 (...) @NewLock()
  %14 = load i32*, i32** @ssl_lock_obj, align 8
  %15 = load i32, i32* %1, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  store i32 %13, i32* %17, align 4
  br label %18

18:                                               ; preds = %12
  %19 = load i32, i32* %1, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %1, align 4
  br label %8

21:                                               ; preds = %8
  %22 = load i32, i32* @OpenSSL_Lock, align 4
  %23 = call i32 @CRYPTO_set_locking_callback(i32 %22)
  %24 = load i32, i32* @OpenSSL_Id, align 4
  %25 = call i32 @CRYPTO_THREADID_set_callback(i32 %24)
  ret void
}

declare dso_local i32 @CRYPTO_num_locks(...) #1

declare dso_local i32* @Malloc(i32) #1

declare dso_local i32 @NewLock(...) #1

declare dso_local i32 @CRYPTO_set_locking_callback(i32) #1

declare dso_local i32 @CRYPTO_THREADID_set_callback(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
